my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EAFTERHOOK/EAFTERHOOK.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERHOOK.dml:16:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERHOOK.dml:25:5: error EAFTERHOOK: illegal 'after' statement bound to hook 'h0': hook has 0 message components, but 1 message component parameters are given
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERHOOK.dml:27:5: error EAFTERHOOK: illegal 'after' statement bound to hook 'h0': hook has 0 message components, but 2 message component parameters are given
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERHOOK.dml:29:5: error EAFTERHOOK: illegal 'after' statement bound to hook 'h1': hook has 1 message components, but 0 message component parameters are given
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERHOOK.dml:31:5: error EAFTERHOOK: illegal 'after' statement bound to hook 'h1': hook has 1 message components, but 0 message component parameters are given
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERHOOK.dml:33:5: error EAFTERHOOK: illegal 'after' statement bound to hook 'h1': hook has 1 message components, but 2 message component parameters are given
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERHOOK.dml:35:5: error EAFTERHOOK: illegal 'after' statement bound to hook 'h2': hook has 2 message components, but 0 message component parameters are given
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERHOOK.dml:37:5: error EAFTERHOOK: illegal 'after' statement bound to hook 'h2': hook has 2 message components, but 0 message component parameters are given
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERHOOK.dml:39:5: error EAFTERHOOK: illegal 'after' statement bound to hook 'h2': hook has 2 message components, but 1 message component parameters are given
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERHOOK.dml:41:5: error EAFTERHOOK: illegal 'after' statement bound to hook 'h2': hook has 2 message components, but 1 message component parameters are given
